--- a/kasir/manifest.json
+++ b/kasir/manifest.json
@@ -2,28 +2,17 @@
   "name": "MARVINZ POS",
   "short_name": "MARVINZ",
   "description": "Tempat Penjualan Profesional untuk MARVINZ",
-  "id": "com.marvinz.pos",
-  "start_url": "./index.html",
+  "id": "/kasir/",
+  "start_url": "/kasirlittlegood/kasir/index.html",
   "display": "standalone",
   "background_color": "#0a0a0b",
   "theme_color": "#6366f1",
   "orientation": "portrait",
-  "categories": [
-    "business",
-    "finance"
-  ],
   "icons": [
     {
       "src": "icon.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
-    },
-    {
-      "src": "icon.png",
-      "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     }
   ]
 }
