--- a/kasir/manifest.json
+++ b/kasir/manifest.json
@@ -1,18 +1,46 @@
 {
+  "lang": "id",
   "name": "MARVINZ POS",
   "short_name": "MARVINZ",
   "description": "Tempat Penjualan Profesional untuk MARVINZ",
-  "id": "/kasir/",
-  "start_url": "/kasirlittlegood/kasir/index.html",
+  "id": "marvinz-kasir-pos",
+  "start_url": "index.html",
   "display": "standalone",
   "background_color": "#0a0a0b",
   "theme_color": "#6366f1",
   "orientation": "portrait",
+  "categories": [
+    "business",
+    "finance"
+  ],
   "icons": [
     {
       "src": "icon.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "form_factor": "narrow",
+      "label": "Tampilan Utama"
+    },
+    {
+      "src": "icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "form_factor": "wide",
+      "label": "Tampilan Desktop"
     }
   ]
 }
