--- a/kasir/manifest.json
+++ b/kasir/manifest.json
@@ -4,7 +4,7 @@
   "short_name": "Little",
   "description": "Tempat Penjualan Profesional - Little POS",
   "id": "little-pos-app",
-  "start_url": "index.html",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#0a0a0b",
   "theme_color": "#6366f1",
@@ -16,9 +16,21 @@
   "icons": [
     {
       "src": "icon.png",
+      "sizes": "192x192",
+      "type": "image/jpeg",
+      "purpose": "any"
+    },
+    {
+      "src": "icon.png",
       "sizes": "512x512",
       "type": "image/jpeg",
       "purpose": "any"
+    },
+    {
+      "src": "icon.png",
+      "sizes": "192x192",
+      "type": "image/jpeg",
+      "purpose": "maskable"
     },
     {
       "src": "icon.png",
