--- a/kasir/manifest.json
+++ b/kasir/manifest.json
@@ -4,7 +4,8 @@
   "short_name": "Little",
   "description": "Tempat Penjualan Profesional - Little POS",
   "id": "little-pos-app",
-  "start_url": "./index.html",
+  "start_url": "./",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#0a0a0b",
   "theme_color": "#6366f1",
